gcc/ChangeLog: PR rtl-optimization/20532 * simplify-rtx.c (simplify_binary_operation_1): Protect from overflow when adding coefficients for PLUS or MINUS. (simplify_binary_operation_1): Handle CONST_DOUBLE exact power of two as multiplier. gcc/testsuite/ChangeLog: PR rtl-optimization/20532 * gcc.target/i386/badshift.c: New.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@96982 138bc75d-0d04-0410-961f-82ee72b054a4